tests/baselines/reference/inheritFromGenericTypeParameter.errors.txt
==== tests/cases/compiler/inheritFromGenericTypeParameter.ts (2 errors) ====
    class C<T> extends T { }
                       ~
!!! error TS2073: A class may only extend another class.
    interface I<T> extends T { }
                           ~
!!! error TS2075: An interface may only extend another class or interface.